# PrivacyGuard

./: .gitignore  00_README.md  01_PrivacyGuard_项目准则与迭代总计划.md  02_第1轮_项目骨架与接口契约.md  03_第2轮_OCR与PII检测链路.md  04_第3轮_Persona仓库与会话映射.md  05_第4轮_决策引擎与约束解析.md  06_第5轮_渲染引擎与还原闭环.md  07_第6轮_API整合_测试与交付.md  AGENTS.md  CLAUDE.md  CROSS_INLINE_GAP_EXPANSION_ANALYSIS.md  DETECTOR_ADDRESS_EVENT_STREAM_PLAN.md  DETECTOR_ADDRESS_MIGRATION_PLAN.md  DETECTOR_CLEAN_STREAM_REWRITE.md  DETECTOR_CLUE_PRIORITY_ANALYSIS.md  DETECTOR_CLUE_SCHEMA_REFACTOR_PLAN.md  DETECTOR_CONFLICT_RULES.md  DETECTOR_REWRITE_PLAN.md  DETECTOR_SCANNER_MATCHER_PLAN.md  DETECTOR_TWO_STACK_PARSER.md  LICENSE  MAIN_FLOW.md  README.md  UNUSED_SYMBOLS.md  What_is_PrivcacyGuard.md  _sanitize_mode_profile.json  _server_detector_output.json  _server_test_output.json  agent.md  de_model重构文档.md  pyproject.toml  tmp_shared_symbols_report.md
addtional/: driverlicense.md  en_card.md  surname_confidence_rules.json  surname_confidence_rules.md  zh_card.md
artifacts/: detector_review_report.json
configs/: decision.label_only.yaml  default.yaml  detector.rule_based.yaml  detector.rule_ner_based.yaml
data/: china_geo_lexicon.json  chinese_addresses.jsonl  chinese_addresses.txt  en_geo_lexicon.json  en_name_lexicon.json  english_addresses.jsonl  english_addresses.txt  generate_data.py  personas.sample.json  pii_dictionary.sample.json  privacy_repository.sample.json  ui_keyword_blacklist_en.json  ui_keyword_blacklist_zh.json
docs/: DETECTOR_IMPLEMENTATION.md  DETECTOR_RULE_TAXONOMY.md  DETECTOR_SCORING.md  DE_MODEL_IMPLEMENTATION.md  address.md  (+20 more)
(+426 files in other folders)
