[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacyguard"
version = "0.1.0"
description = "PrivacyGuard 第一轮骨架工程"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]
# PP-OCRv5 真实推理（需安装 paddleocr 与 PaddlePaddle）
ocr = [
    "paddleocr>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

